Team Avengers/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Future_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Future Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>only new projects can be future projects for practitioner</errorMessage>
            <filterItems>
                <field>Account.Project_Status__c</field>
                <operation>equals</operation>
                <value>New</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Practitioners</relationshipLabel>
        <relationshipName>Practitioners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Projects__c</fullName>
        <label>Previous Projects</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Practitioner_End_Date__c</fullName>
        <label>Practitioner End Date on Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_Start_Date__c</fullName>
        <label>Practitioner Start Date on Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_Swap__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practitioner Swap</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Practitioners</relationshipLabel>
        <relationshipName>Practitioners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Name_2__c</fullName>
        <formula>AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Benefits__c</fullName>
        <label>Benefits</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Certificationtype__c</fullName>
        <label>Certification Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DEV 401  - Developer</fullName>
                </value>
                <value>
                    <fullName>DEV 501 – Advanced Developer</fullName>
                </value>
                <value>
                    <fullName>Administrator (ADM 201)</fullName>
                </value>
                <value>
                    <fullName>Service Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>Sales Cloud Consultant</fullName>
                </value>
                <value>
                    <fullName>Advanced Administrator (ADM 301)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_Hiring__c</fullName>
        <label>Hiring</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Leave__c</fullName>
        <label>Leave</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SM_Salary__c</fullName>
        <description>to track salary of practitioners</description>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>autonumber__c</fullName>
        <displayFormat>{00}</displayFormat>
        <label>autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Practitioner_View_SLL</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Practitioner View (SLL)</label>
        <sharedTo>
            <role>Service_line_leader</role>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Prac_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Practitioner_End_Date__c &gt; Account.Project_End_Date__c</errorConditionFormula>
        <errorDisplayField>Practitioner_End_Date__c</errorDisplayField>
        <errorMessage>Practitioner End Date cannot be greater than Project End Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prac_Start_Date</fullName>
        <active>false</active>
        <errorConditionFormula>Practitioner_Start_Date__c &lt; Account.Project_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Practitioner_Start_Date__c</errorDisplayField>
        <errorMessage>Practitoner Start Date cannot be less than Project Start Date</errorMessage>
    </validationRules>
</CustomObject>